--- a/templates/blog_manage.html
+++ b/templates/blog_manage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../static/css/blog_manage.css" type="text/css">
     <script src="../static/js/jquery-1.11.3.js"></script>
     <script src="../static/js/blog_manage.js"></script>
+    <script src="../static/js/close.js"></script>
 </head>
 <body>
 <!--顶部导航-->
@@ -14,7 +15,7 @@
         <div id="top">
         <div class="topleft">
             <img class="item" src="../static/images/456.png">
-            <p class="item">Bother Forum</p>
+            <p class="item">Brother Forum</p>
         </div>
         <div class="topcenter">
             <div class="tags">
