--- a/templates/protocol.html
+++ b/templates/protocol.html
@@ -5,6 +5,7 @@
     <title>用户协议</title>
     <link rel="icon" href="../static/images/icon.png" type="img/png" />
     <link rel="stylesheet" href="../static/css/protocol.css" type="text/css">
+    <script src="../static/js/close.js"></script>
 </head>
 <body>
     <div id="box">
