--- a/static/css/about.css
+++ b/static/css/about.css
@@ -65,11 +65,15 @@ body{
     background: #179999;
     float: left;
     width: 980px;
-    height: 600px;
+    height: 500px;
+    padding: 50px 50px 30px;
+    box-sizing: border-box;
 }
 #right{
     background: #dd8b84;
     float: right;
     width: 350px;
-    height: 600px;
+    height: 500px;
+    padding: 50px 50px 30px;
+    box-sizing: border-box;
 }
