--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -14,12 +14,12 @@ body{
     width:1500px;
     height:50px;
     background:#FFFFFF;
-    /*margin:0 auto;*/
+    margin:0 auto;
     /*position:relative;*/
     font-size:12px;
     position:fixed;
     left:50%;
-    top:0;
+    top:0px;
     margin-left:-750px;
     z-index: 100;
 }
@@ -48,6 +48,7 @@ body{
     margin-left: 350px;
     position:relative;
 }
+
 .topcenter .tags{
     height:50px;
     width:300px;
@@ -60,13 +61,13 @@ body{
 }
 .topcenter .tags>a,.topcenter .tags>ul>a{
     font-size: 18px;
-
     color:-webkit-link;
     float: left;
 }
 .topcenter .tags>a{
     margin: 0 35px;
 }
+
 .type .type_list{
     float: right;
     position:absolute;
@@ -120,6 +121,7 @@ body{
     width:30px;
     height:30px;
     display: inline-block;
+    border-radius: 50%;
     /*visibility: visible;*/
 }
 .pic .list{
@@ -150,7 +152,7 @@ body{
     padding:0px 5px;
 }
 .topright a{
-    padding:0 10px;
+    padding:0px 10px;
     font-size:14px;
     font-weight:bold;
 }
@@ -200,6 +202,7 @@ body{
 }
 .personal .up{
     height:150px;
+    overflow: hidden;
 }
 .up a{
     float:left;
@@ -211,11 +214,12 @@ body{
     margin: 15px 60px;
 }
 .up img{
-    width:80px;
+    height:80px;
 }
 .up p{
     float:left;
-    height:30px;
+    height:25px;
+    line-height: 25px;
     width:180px;
     margin:0 10px;
     text-align: center;
@@ -223,6 +227,37 @@ body{
     color:black;
     font-weight: bold;
 }
+.up div{
+    width:45px;
+    height:25px;
+    border: 1px solid goldenrod;
+    border-radius: 5px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 25px;
+    cursor: pointer;
+    position:relative;
+     bottom: 55px;
+}
+.up #focus_btn{
+    float:right;
+    right:10px;
+}
+.up #massage_btn{
+    float:left;
+    left:10px;
+
+}
+.up #focus_btn:hover{
+    background:thistle;
+
+
+}
+.up #massage_btn:hover{
+    background:darkseagreen;
+}
+
+
 .personal .bottom{
     height:150px;
 }
@@ -351,6 +386,7 @@ body{
 .comment .img,.comment .img img{
     width:30px;
     height:30px;
+    border-radius: 50%;
 }
 .comment .img{
     border-radius: 50%;
