--- a/static/css/blog_manage.css
+++ b/static/css/blog_manage.css
@@ -67,8 +67,6 @@ body{
     margin: 0 35px;
 }
 
-
-
 .type .type_list{
     float: right;
     position:absolute;
@@ -122,6 +120,7 @@ body{
     width:30px;
     height:30px;
     display: inline-block;
+    border-radius: 50%;
     /*visibility: visible;*/
 }
 .pic .list{
