--- a/static/css/login.css
+++ b/static/css/login.css
@@ -113,6 +113,13 @@ body{background:url("../images/123.jpg") no-repeat;
     font-size:14px;
     margin-bottom:10px;
 }
+#main form #tigs{
+    position: absolute;
+    font-size: 14px;
+    color:palevioletred;
+    font-weight: bold;
+    margin-top: 12px;
+}
 #main .form-line{
     width:500px;
     height:50px;
@@ -126,7 +133,7 @@ body{background:url("../images/123.jpg") no-repeat;
     width:300px;
     height:40px;
     margin-left:30px;
-    margin-right:30px;
+    margin-right:10px;
     padding-left:5px;
 }
 .form-line p{
@@ -181,6 +188,12 @@ body{background:url("../images/123.jpg") no-repeat;
     text-decoration:none;
     box-sizing:border-box;
 }
+.form-line #submit2 #btnLogin{
+    margin-left: 40px;
+    margin-right: 20px;
+}
+
+
 .form-line #submit2 a{margin:10px;}
 .form-line #submit2 .but:hover{
     font-size:18px;
@@ -197,11 +210,22 @@ body{background:url("../images/123.jpg") no-repeat;
 }
 .clearinput>.clearimg{
     position:absolute;
-    right:38px;
+    left:-35px;
     top:14px;
     cursor:pointer;
     display:none
 }
+.clearinput>.clearimg:nth-child(1){
+
+    left:-50px;
+
+}
+
+
+
+
+
+
 
 /*底部*/
 #bottom{
