--- a/static/css/write.css
+++ b/static/css/write.css
@@ -121,6 +121,7 @@ body{
     width:30px;
     height:30px;
     display: inline-block;
+    border-radius: 50%;
     /*visibility: visible;*/
 }
 .pic .list{
