--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,14 @@
     <link href="../static/css/index.css" rel="stylesheet">
     <script src="../static/js/jquery-1.11.3.js"></script>
     <script src="../static/js/index.js"></script>
+    <script src="../static/js/close.js"></script>
 </head>
 <body>
     <!--1.顶部-->
     <div id="top">
         <div class="topleft">
             <img class="item" src="../static/images/456.png">
-            <p class="item">Bother Forum</p>
+            <p class="item">Brother Forum</p>
         </div>
         <div class="topcenter">
             <input type="text" name="search" placeholder="请输入要搜索的内容">
@@ -38,31 +39,38 @@
             <p><a href="">消息</a></p>
             <img src="../static/images/write_blog.png" height="24" width="30"/>
             <p><a href="/write_blog">写博客</a></p>
-            <a href="/login" class="regs">登陆</a>
-            <a href="/regist" class="log">注册</a>
+            {% if params.user %}
+                <a href="/login" class="regs" style="display: none">登陆{{params.user}}</a>
+                <a href="/regist" class="log" style="display: none">注册</a>
+            {% else %}
+                <a href="/login" class="regs">登陆{{params.user}}</a>
+                <a href="/regist" class="log">注册</a>
+            {% endif %}
         </div>
+    {% if params.user %}
         <ul>
             <li class="pic">
                 <div class="img">
-                    {% if user in params %}
+                    <a href="/center">
                         {% if params.user.img %}
-                            <a href=""><img src="{{ params.user.img }}" alt=""></a>
+                            <img src="{{ params.user.img }}" alt="">
                         {% else %}
-                            <a href=""><img src="../static/images/icon.png" alt=""></a>
+                            <img src="../static/images/icon.png" alt="">
                         {% endif %}
-                    {% else %}
-                        <a href=""><img src="../static/images/icon.png" alt=""></a>
-                    {% endif %}
+                    </a>
                 </div>
                 <ol class="list">
                     <li><a href="">我的关注</a></li>
                     <li><a href="">我的收藏</a></li>
-                    <li><a href="{{ url_for('center') }}">个人中心</a></li>
-                    <li><a href="{{ url_for('manager_blog') }}">帖子管理</a></li>
-                    <li><a href="{{ url_for('logout') }}" id="logout">注销</a></li>
+                    <li><a href="/center">个人中心</a></li>
+                    <li><a href="/manager_blog">帖子管理</a></li>
+                    <li><a href="/logout" id="logout">注销</a></li>
                 </ol>
             </li>
         </ul>
+    {% else %}
+            <ul style="display: none"></ul>
+        {% endif %}
     </div>
     <!--2.主体-->
     <div id="main">
