--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../static/css/reset_password.css">
     <script src="../static/js/jquery-1.11.3.js"></script>
     <script src="../static/js/resetpassword.js"></script>
+    <script src="../static/js/close.js"></script>
 </head>
 <body>
     <div id="top">
@@ -33,39 +34,16 @@
                                maxlength="11" class="phone_input" placeholder="请输入手机号" required>
                         <img src="../static/images/input1.png" class="clear">
                     </div>
-                    <span class="uphone"> </span>
-                    <b style="color:red;font-size:14px;">
-                        {% if params.phone_result %}
-                            手机号码不正确，或尚未注册
-                            <script>
-                                var timer=setTimeout(function (){
-                                    $(".uphone").siblings("b").css("display","none");
-                                    console.log("隐藏")
-                                },3000);
-                                console.log("开始显示");
-                                clearTimeout(timer)
-                            </script>
-                        {% endif %}</b>
+                    <span class="uphone"></span>
+                    <b style="color:red;font-size:14px;display: none">手机号码不正确，或尚未注册</b>
                 </div>
                 <div class="line">
                     <p>验证码</p>
                     <div class="inline" id="codeinline">
-                        <input type="text" name="code" maxlength="6" placeholder="请输入验证码" class="code" required>
+                        <input type="text" name="code" maxlength="6" placeholder="请输入验证码" class="code" id="code" required>
                         <img src="../static/images/input1.png" class="clear" id="codeimg">
                     </div>
-                    <button type="button" class="codebtn" onclick="getCertifyCode()">发送验证码</button>
-                    <b style="color: red;font-size: 14px;">
-                        {% if params.code_result %}
-                            验证码不正确
-                            <script>
-                                var timer=setTimeout(function(){
-                                    $(".uphone").css("display","none");
-                                    console.log("隐藏")
-                                },3000);
-                                console.log("开始显示");
-                                clearTimeout(timer)
-                            </script>
-                        {% endif %}</b>
+                    <button type="button" class="codebtn">发送验证码</button>
                 </div>
 
                 <div class="line">
